package oop.erbe.aufgabe5.mueloe;

public abstract class Form {

    public abstract double berechneUmfang();
}
